fix alignment

--- a/appcompose/home/home.css
+++ b/appcompose/home/home.css
@@ -79,7 +79,7 @@
 }
 
 #main {
-    margin-left: 0px;
+    margin: 10px;
     /*max-width: 277px;*/
     width: 100%;
     overflow: hidden;
